package util;

public class TextUI {
}